feat(transfers): implement transfers transaction type & feat(transfers): implement total spent by transaction type
